# nr-python-data-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_platform/: __init__.py
data_platform/app_logging/: logger.py
data_platform/config/: query_config_loader.py
data_platform/db/: db_connection.py  executor.py
data_platform/logging/: logger.py
python_data_platform.egg-info/: PKG-INFO  SOURCES.txt
