
# pyproject.toml at the root (python-data-platform/)
[project]
name = "python-data-platform"          # Distribution name (can keep hyphens)
version = "0.1.0"
description = "Shared components for data platform: db, logging, config"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ting Ouyang" }]

# If you publish to PyPI later, add classifiers, urls, etc.

dependencies = [
  # put runtime deps here, or keep them in requirements.txt if you prefer
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_platform*"]  # package import name uses underscore
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
